[package]
name = "RustLoader"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
strip = true
panic = "abort"

[dependencies]
sysinfo = "0.29.0"
miniz_oxide = "0.5"
ureq = "2.5"
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }
